# prime_dynamics_theory

papers/RH-100-hundred-layer-route-review/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-100-hundred-layer-route-review/experiments/: build_archive.py  build_hundred_layer_review.py  make_figures.py  verify_archive.py
papers/RH-100-hundred-layer-route-review/results/: archive_verification.json  dependency_manifest.json  hundred_layer_route_review.json  hundred_layer_route_review_smoke.json  summary.json
papers/RH-100-hundred-layer-route-review/tests/: test_archived_results.py  test_theory.py
papers/RH-101-finite-memory-packet-gram-action/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-101-finite-memory-packet-gram-action/experiments/: build_archive.py  make_figures.py  run_finite_memory_gram_audit.py  verify_archive.py
papers/RH-101-finite-memory-packet-gram-action/results/: archive_verification.json  dependency_manifest.json  finite_memory_gram_audit.json  finite_memory_gram_smoke.json  summary.json
papers/RH-101-finite-memory-packet-gram-action/tests/: test_archived_results.py  test_theory.py
papers/RH-104-source-weighted-prefix-law/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-104-source-weighted-prefix-law/experiments/: build_archive.py  build_prefix_audit.py  make_figures.py  verify_archive.py
papers/RH-104-source-weighted-prefix-law/results/: archive_verification.json  dependency_manifest.json  prefix_transient_audit.json  prefix_transient_smoke.json  summary.json
papers/RH-104-source-weighted-prefix-law/tests/: test_archived_results.py  test_theory.py
papers/RH-105-observation-residual-cancellation-law/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-105-observation-residual-cancellation-law/experiments/: build_archive.py  build_cancellation_audit.py  make_figures.py  verify_archive.py
papers/RH-105-observation-residual-cancellation-law/results/: archive_verification.json  dependency_manifest.json  observation_residual_audit.json  observation_residual_smoke.json  summary.json
papers/RH-105-observation-residual-cancellation-law/tests/: test_archived_results.py  test_theory.py
papers/RH-106-uniform-gap-aware-quotient-law/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-106-uniform-gap-aware-quotient-law/experiments/: build_archive.py  build_quotient_audit.py  make_figures.py  verify_archive.py
papers/RH-106-uniform-gap-aware-quotient-law/results/: archive_verification.json  dependency_manifest.json  summary.json  uniform_quotient_audit.json  uniform_quotient_smoke.json
papers/RH-106-uniform-gap-aware-quotient-law/tests/: test_archived_results.py  test_theory.py
papers/RH-107-source-seeded-quotient-support-law/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-108-finite-memory-fourth-cross-support/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-109-exterior-power-fourth-cross-support/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-11-collet-eckmann-flat-trace-completion/: README.md  main.tex  pyproject.toml  references.bib
papers/RH-110-finite-memory-three-mode-capacity/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib  requirements.txt
papers/RH-12-postcritical-weighted-zeta-factorization/: README.md  main.tex  pyproject.toml  references.bib  requirements.txt
papers/RH-13-validated-reduced-sector-spectral-gap/: README.md  main.tex  pyproject.toml  references.bib  requirements.txt
papers/RH-132-canonical-partial-isometry-forcing-gauge/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-137-finite-horizon-young-tail-envelope/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-14-square-root-parity-boundary-layer/: .gitignore  README.md  main.tex  pyproject.toml  references.bib
papers/RH-142-factorized-arb-snapshot-packet-closure/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib  requirements.txt
papers/RH-144-backward-block-controlled-viability/: .gitignore  README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib
papers/RH-146-projective-gram-base-recurrence/: README.md  THEOREM_LEDGER.md  UPDATED_ROADMAP.md  main.tex  pyproject.toml  references.bib  requirements.txt
papers/RH-15-parity-extracted-bulk-scattering/: README.md  main.tex  pyproject.toml  references.bib
papers/RH-16-endpoint-gaussian-resolution-rank/: README.md  main.tex  pyproject.toml  references.bib
papers/RH-17-time-ordered-boundary-monodromy/: README.md  main.tex  pyproject.toml  references.bib  requirements.txt
papers/RH-18-branch-isolated-gaussian-return/: README.md  main.tex  pyproject.toml  references.bib
papers/RH-19-complement-excursion-self-energy/: README.md  main.tex  pyproject.toml  references.bib
papers/RH-20-sector-resolved-critical-branches/: .gitignore  README.md  main.tex  pyproject.toml  references.bib
papers/RH-21-peripheral-biorthogonal-branch-collapse/: README.md  main.tex  pyproject.toml  references.bib  requirements.txt
papers/RH-22-dark-channel-schur-self-energy/: README.md  main.tex  pyproject.toml  references.bib
papers/RH-23-physical-packet-complement-feshbach/: README.md  main.tex  pyproject.toml  references.bib
papers/RH-24-contour-feshbach-root-count/: README.md  main.tex  pyproject.toml  references.bib
papers/RH-25-directional-rouche-closure/: .gitignore  README.md  main.tex  pyproject.toml  references.bib
papers/RH-26-primal-dual-directional-certificate/: README.md  main.tex  pyproject.toml  references.bib
(+4011 files in other folders)
