[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rh101-finite-memory-packet-gram-action"
version = "0.1.0"
description = "Finite-memory packet actions for normalized Gram recursions"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7", "numpy>=1.24", "pytest>=7.0", "python-flint>=0.5"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
