[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rh104-source-weighted-prefix-law"
version = "0.1.0"
description = "Source-weighted finite-prefix transient bounds and barriers"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7", "numpy>=1.24", "pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
