[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rh105-observation-residual-cancellation-law"
version = "0.1.0"
description = "Signed observation/residual cancellation laws for postblock Hardy transfer"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7", "pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
