[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rh106-uniform-gap-aware-quotient-law"
version = "0.1.0"
description = "Uniform gap-aware quotient prices and stopped endpoint safety"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7", "pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
