[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rh107-source-seeded-quotient-support-law"
version = "0.1.0"
description = "Source-seeded weak-mode support separation and coarse quotient prices"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7", "pytest>=7.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
