[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finite-memory-three-mode-capacity"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy", "matplotlib", "python-flint"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
