[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "postcritical-weighted-zeta"
version = "0.1.0"
description = "Postcritical factor audit for a weighted quadratic dynamical zeta function"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "mpmath>=1.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
