[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "validated-reduced-sector-gap"
version = "0.1.0"
description = "Arb-certified Taylor operator bounds for reduced dynamical Fredholm sectors"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "python-flint>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
