[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canonical-partial-isometry-forcing-gauge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["matplotlib", "numpy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
