[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finite-horizon-young-tail-envelope"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["matplotlib", "mpmath", "numpy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
