[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "square-root-parity-boundary-layer"
version = "0.1.0"
description = "Small-noise parity splitting and critical endpoint boundary layers"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
