[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factorized-arb-snapshot-packet-closure"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "python-flint"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

