[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projective-gram-base-recurrence"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "mpmath", "matplotlib"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

