[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parity-extracted-bulk-scattering"
version = "0.1.0"
description = "Exact endpoint poles and noisy resonance-cloud scattering"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
