[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "time-ordered-boundary-monodromy"
version = "0.1.0"
description = "Time-ordered boundary cycles, geometric determinants, and conditioning"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "mpmath>=1.3",
  "numpy>=1.24",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
