[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dark-channel-schur-self-energy"
version = "0.1.0"
description = "Exact bright/dark Schur reduction and local self-energy audit"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "mpmath>=1.3",
  "numpy>=1.24",
  "scipy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
