[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "primal-dual-directional-certificate"
version = "0.1.0"
description = "Goal-oriented primal-dual residual certificates for Feshbach corrections"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "scipy>=1.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
